omg so much shit I changed

--- a/packages/.gitignore
+++ b/packages/.gitignore
@@ -10,3 +10,7 @@
 /iron-layout
 /iron-dynamic-template
 /accounts-ui-bootstrap-3
+/accounts-ui-bootstrap-3
+/crypto-md5
+/font-awesome
+/crypto-base
